[tool.poetry]
name = "canim1"
version = "0.1.0"
description = ""
authors = ["Korijn van Golen <k.vangolen@clinicalgraphics.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tomlkit = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
